# forgetest

./: .gitignore  Cargo.toml  Implementation plan.md  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  release.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/forgetest-cli/: Cargo.toml
crates/forgetest-cli/src/: main.rs
crates/forgetest-cli/src/commands/: compare.rs  init.rs  list_models.rs  mod.rs  run.rs  validate.rs
crates/forgetest-cli/tests/: cli_tests.rs  e2e_pipeline.rs  regression.rs
crates/forgetest-core/: Cargo.toml
crates/forgetest-core/benches/: parsing.rs  scoring.rs
crates/forgetest-core/src/: engine.rs  error.rs  lib.rs  model.rs  parser.rs  report.rs  results.rs  statistics.rs  traits.rs
crates/forgetest-providers/: Cargo.toml
crates/forgetest-providers/src/: anthropic.rs  config.rs  error.rs  lib.rs  mock.rs  ollama.rs  openai.rs
crates/forgetest-report/: Cargo.toml
crates/forgetest-report/src/: html.rs  lib.rs  sarif.rs
crates/forgetest-runner/: Cargo.toml
crates/forgetest-runner/src/: clippy.rs  compiler.rs  lib.rs  sandbox.rs  test_runner.rs
docs/: book.toml
docs/src/: SUMMARY.md  advanced.md  ci-integration.md  getting-started.md  providers.md  scoring.md  writing-eval-cases.md
eval-sets/: rust-algorithms.toml  rust-async.toml  rust-basics.toml
examples/: ci_workflow.yml  custom_scorer.rs  quick_eval.rs
