[package]
name = "forgetest-cli"
description = "CLI binary for forgetest — LLM code-quality eval harness"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/forgetest-cli"
readme = "../../README.md"

[[bin]]
name = "forgetest"
path = "src/main.rs"

[dependencies]
forgetest-core = { workspace = true }
forgetest-runner = { workspace = true }
forgetest-providers = { workspace = true }
forgetest-report = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
