[package]
name = "forgetest-report"
description = "HTML/JSON/SARIF report generation for forgetest"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/forgetest-report"
readme = "../../README.md"

[dependencies]
forgetest-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
uuid = { workspace = true }
